fix(): Heading space on mobile viewport

--- a/src/_sass/components/_markdown.scss
+++ b/src/_sass/components/_markdown.scss
@@ -36,6 +36,8 @@
   }
 
   & > h2 {
+    margin-top: 35px;
+
     @include breakpoint(medium up) {
       margin-top: 48px;
     }
